fixed form styling on mobile devices

--- a/public/stylesheets/_forms.scss
+++ b/public/stylesheets/_forms.scss
@@ -11,11 +11,6 @@
       height: 25vh;
       margin: 2.5rem auto;
     }
-    @media screen and (max-width: 600px) {
-      .cardImg {
-        height: 15vh;
-      }
-    }
   }
 }
 
@@ -37,4 +32,15 @@
 .back {
   text-decoration: none;
   color: $darkGreen;
+}
+
+@media screen and (max-width: 600px) {
+  .cardSize {
+    width: 75vw;
+    .cardImgContainer {
+      .cardImg {
+        height: 20vh;
+      }
+    }
+  }
 }
